Mobile improvements, no longer running off screen to the left

--- a/my-portfolio/src/styles/experience_card.css
+++ b/my-portfolio/src/styles/experience_card.css
@@ -88,3 +88,8 @@
   font-weight: bold;
   font-size: large;
 }
+@media screen and (max-width: 950px) {
+  .timeline-graphic-wrapper {
+    display: none;
+  }
+}
